<resources>
    <string name="app_name">7MinutesWorkout</string>
    <string name="start">START</string>
    <string name="image">start image</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="_10">10</string>
    <string name="_30">30</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE:</string>
    <string name="end">END</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_completed_the_workout">You have completed the workout</string>
    <string name="finish">FINISH</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="dialog_description">This will stop your workout. You\'re come this far are you sure you want to quit? </string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
</resources>